outputs/workspace_output_1772892849_9936.txt
  File "<string>", line 7
    content = content.replace(': WebSocketServerProtocol', ': 'WebSocketServerProtocol'')
                                                           ^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
